tests/negative/parser_bad10.sp
(* Declaration after main *)



main : Int () {
	return 0;
}


a : Int = 10;
